Fix CSS for bottom header and add readability changes

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@ a, .header-bottom-text {
     color: #f9faf9;
 }
 
+.text {
+    background-color: #1F2937;
+    border-radius: 3rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+}
+
 .logo-img {
     width: 5rem;
     border-radius: 50%;
@@ -38,17 +45,25 @@ a, .header-bottom-text {
     justify-content: center;
     font-size: 36px;
     font-weight: bolder;
-    color: #f9faf9
+    color: #f9faf9;
+}
+
+.random-information {
+    background-color: #1F2937;
+    border-radius: 3rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
 }
 
 .header-bottom-image {
-    width: 10rem;
+    width: 20rem;
     border: solid #1F2937;
 }
 
 .header-text {
     display: flex;
     flex-direction: column;
+    width: 27rem;
 }
 
 .header-top-text {
@@ -64,7 +79,13 @@ a, .header-bottom-text {
     align-items: center;
 }
 
-
+.top-button {
+    background-color: #3882F6;
+    color: #f9faf9;
+    border: none;
+    border-radius: 2rem;
+    padding: 0.5rem 1.5rem;
+}
 
 .top-header {
     display: flex;
@@ -81,7 +102,8 @@ a, .header-bottom-text {
     width: 75rem;
     justify-content: flex-start;
     padding-bottom: 3rem;
-    gap: 2rem;
+    gap: 15rem;
+    align-items: center;
 }
 
 .footer {
